fixed app container in dark mode

--- a/css/master.css
+++ b/css/master.css
@@ -82,8 +82,8 @@
   .start,
   .play,
   .restart {
-    width: 3rem;
-    height: 3rem;
+    width: 5rem;
+    height: 5rem;
     font-size: 3rem;
     border: none;
     border-radius: 50%;
